--- a/index.html
+++ b/index.html
@@ -3,51 +3,69 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Stephanie Rodriguez's Web Developer Portfolio</title>
+        <title>Stephanie Rodriguez's Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+    <!-- Header -->
+        <header class="header">
             <h1>Stephanie Rodriguez</h1>
             <div class="profile picture" alt="">
                 <img src="">
             </div>
-            <!-- Navigation -->
+    <!-- Navigation -->
             <nav class="nav">
-                <ul>
+                <ul class="nav ul">
                     <li class="nav ul li">
                         <a href="#about-me">About Me</a>
                     </li>
-                    <li class="nav list">
+                    <li class="nav ul li">
                         <a href="#my-work">My Work</a>
                     </li>
-                    <li class="nav list">
+                    <li class="nav ul li">
                         <a href="#contact-me">Contact Me</a>
                     </li>
                 </ul>
             </nav>
             <h2>I am a full stack developer student!</h2>
         </header>
-        <!-- Main-->
-        <section class="intro">
-            <h1 class = "section title"> Hello, my name is Stephanie Rodriguez </h1>
+    <!-- About Me -->
+        <section class="intro" id="about-me">
+            <h2 class="section-title"> About Me </h2>
+            <p> Hello, my name is Stephanie Rodriguez. I am new to the tech industry but an euthisatic learner.</p>
         </section>
-        <!-- My Work -->
-        <section class="work">
-            <h2 class="work titles" id="#my-work">  My Work </h2>
+
+    <!-- My Work -->
+        <section class="work" id="my-work">
+            <h2 class="section-title"> My Work </h2>
             <div class="projects">
                 <a href="https://stephrrcodes.github.io/run-buddy/" title="Run Buddy">Run Buddy</a>
-                <img src="../Portfolio/images/run buddy.jpeg">
+                <img src="../Portfolio/images/run buddy.jpeg" class="img">
             </div>
             <div class="projects">
                 <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/" title="Horiseon-Code-Refractor">Horiseon-Code-Refractor</a>
-                <img src="../Portfolio/images/horiseon.jpg">
+                <img src="../Portfolio/images/horiseon.jpg" class="img">
             </div>
             <div class="projects">
                 <a href="https://stephrrcodes.github.io/run-buddy/" title="Robot Gladiators">Robot Gladiators</a>
                 <p></p>
             </div>
-            
         </section>
+
+    <!--Contact Me -->
+        <section class="contact" id="contact-me"> 
+            <h2 class="section-title">Contact Me</h2>
+            <ul class="contact-list">
+                <li>Phone</li>
+                <li><a href="#">Email</a></li>
+                <li><a href= "#"></a>LinkedIn</li>
+            </ul>
+        </section>
+
+    <!-- Footer -->
+        <footer class="footer">
+            <p>Thank you for your time</p>
+            <p>This webpage was built by Stephanie Rodriguez</p>
+        </footer>
     </body>
 </html>
