update css and add hover

--- a/index.html
+++ b/index.html
@@ -9,49 +9,44 @@
     <body>
     <!-- Header -->
         <header class="header">
-            <h1>Stephanie Rodriguez</h1>
-            <div class="profile picture" alt="">
-                <img src="">
-            </div>
+            <h1 class="header h1">Stephanie Rodriguez</h1>
     <!-- Navigation -->
             <nav class="nav">
                 <ul class="nav ul">
-                    <li class="nav ul li">
-                        <a href="#about-me">About Me</a>
-                    </li>
-                    <li class="nav ul li">
-                        <a href="#my-work">My Work</a>
-                    </li>
-                    <li class="nav ul li">
-                        <a href="#contact-me">Contact Me</a>
-                    </li>
+                    <li class="nav ul li"><a href="#about-me">About Me</a></li>
+                    <li class="nav ul li"><a href="#my-work">My Work</a></li>
+                    <li class="nav ul li"><a href="#contact-me">Contact Me</a></li>
                 </ul>
             </nav>
-            <h2>I am a full stack developer student!</h2>
+            <h2 class="header h2">Full Stack Developer</h2>
         </header>
     <!-- About Me -->
         <section class="intro" id="about-me">
+            <div class="profile picture" alt="">
+                <img src="" >
+            </div>
             <h2 class="section-title"> About Me </h2>
             <p> Hello, my name is Stephanie Rodriguez. I am new to the tech industry but an euthisatic learner.</p>
+            
+                <img src="./images/laptop-unsplash.jpg" class="img">
         </section>
 
     <!-- My Work -->
         <section class="work" id="my-work">
             <h2 class="section-title"> My Work </h2>
-            <div class="projects">
-                <a href="https://stephrrcodes.github.io/run-buddy/" title="Run Buddy">Run Buddy</a>
-                <img src="../Portfolio/images/run buddy.jpeg" class="img">
-            </div>
-            <div class="projects">
-                <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/" title="Horiseon-Code-Refractor">Horiseon-Code-Refractor</a>
-                <img src="../Portfolio/images/horiseon.jpg" class="img">
-            </div>
-            <div class="projects">
-                <a href="https://stephrrcodes.github.io/run-buddy/" title="Robot Gladiators">Robot Gladiators</a>
-                <p></p>
-            </div>
+            <h3 class="projects"> Run Buddy</h3>
+                <a href="https://stephrrcodes.github.io/run-buddy/">
+                <img alt="Run Buddy site main image with woman typing shoelace" src="../Portfolio/images/run buddy.jpeg" class="img">
+             </a>
+             <h3 class="projects"> Horiseon Code Refractor </h3>
+             <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/">
+                <img alt="workers in a conference meeting around table" src="../Portfolio/images/horiseon.jpg" class="img">
+             </a>
+             <h3 class="projects"> Robot Gladiators </h3>
+             <a href="https://stephrrcodes.github.io/run-buddy/">
+                <img alt="Run Buddy site main image with woman typing shoelace" src="../Portfolio/images/run buddy.jpeg" class="img">
+             </a>
         </section>
-
     <!--Contact Me -->
         <section class="contact" id="contact-me"> 
             <h2 class="section-title">Contact Me</h2>
