project images fixed

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <h2 class="section-title"> My Work </h2>
             <h3 class="projects"> Run Buddy</h3>
                 <a href="https://stephrrcodes.github.io/run-buddy/">
-                <img alt="Run Buddy site main image with woman typing shoelace" src="../Portfolio/images/run buddy.jpeg" class="img">
+                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
              </a>
              <h3 class="projects"> Horiseon Code Refractor </h3>
              <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/">
-                <img alt="workers in a conference meeting around table" src="../Portfolio/images/horiseon.jpg" class="img">
+                <img alt="workers in a conference meeting around table" src="./images/horiseon.jpg" class="img">
              </a>
              <h3 class="projects"> Robot Gladiators </h3>
              <a href="https://stephrrcodes.github.io/run-buddy/">
-                <img alt="Run Buddy site main image with woman typing shoelace" src="../Portfolio/images/run buddy.jpeg" class="img">
+                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
              </a>
         </section>
     <!--Contact Me -->
