projects into columns and image added to sub header

--- a/index.html
+++ b/index.html
@@ -3,57 +3,58 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Stephanie Rodriguez's Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <title>Stephanie Rodriguez's Portfolio</title>
     </head>
     <body>
     <!-- Header -->
-        <header class="header">
-            <h1 class="header h1">Stephanie Rodriguez</h1>
+        <header>
+            <h1>Stephanie Rodriguez</h1>
     <!-- Navigation -->
-            <nav class="nav">
-                <ul class="nav ul">
-                    <li class="nav ul li"><a href="#about-me">About Me</a></li>
-                    <li class="nav ul li"><a href="#my-work">My Work</a></li>
-                    <li class="nav ul li"><a href="#contact-me">Contact Me</a></li>
+            <nav>
+                <ul>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#my-work">My Work</a></li>
+                    <li><a href="#contact-me">Contact Me</a></li>
                 </ul>
             </nav>
-            <h2 class="header h2">Full Stack Developer</h2>
         </header>
+        <div>
+            <h2>Full Stack Developer</h2>
+        </div>
+
     <!-- About Me -->
         <section class="intro" id="about-me">
-            <div class="profile picture" alt="">
-                <img src="" >
-            </div>
             <h2 class="section-title"> About Me </h2>
-            <p> Hello, my name is Stephanie Rodriguez. I am new to the tech industry but an euthisatic learner.</p>
-            
-                <img src="./images/laptop-unsplash.jpg" class="img">
+            <p> Hello, my name is Stephanie Rodriguez. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptas veritatis perferendis rerum distinctio odio expedita ullam rem praesentium tempore, quaerat officia impedit vitae dolore aspernatur quae doloremque culpa beatae.</p>
         </section>
 
     <!-- My Work -->
         <section class="work" id="my-work">
             <h2 class="section-title"> My Work </h2>
+            <p> Here a few examples of my projects.</p>
             <h3 class="projects"> Run Buddy</h3>
                 <a href="https://stephrrcodes.github.io/run-buddy/">
                 <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
              </a>
-             <h3 class="projects"> Horiseon Code Refractor </h3>
-             <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/">
+             <div class="projects-column">
+            <h3 class="projects"> Horiseon Code Refractor </h3>
+                <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/">
                 <img alt="workers in a conference meeting around table" src="./images/horiseon.jpg" class="img">
-             </a>
+                </a>
              <h3 class="projects"> Robot Gladiators </h3>
-             <a href="https://stephrrcodes.github.io/run-buddy/">
-                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
-             </a>
+                <a href="https://stephrrcodes.github.io/robot-gladiators/">
+                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/robotgladiators-unsplash.jpg" class="img">
+                </a>
+            </div>
         </section>
     <!--Contact Me -->
         <section class="contact" id="contact-me"> 
             <h2 class="section-title">Contact Me</h2>
             <ul class="contact-list">
-                <li>Phone</li>
-                <li><a href="#">Email</a></li>
-                <li><a href= "#"></a>LinkedIn</li>
+                <li>Phone: (909) 775-6811</li>
+                <li><a href="mailto:ramossteph08@gmail.com">Email Me</a></li>
+                <li><a href="https://www.linkedin.com/in/stephanie-rrodriguez/"> My LinkedIn Profile</a></li>
             </ul>
         </section>
 
