--- a/index.html
+++ b/index.html
@@ -19,21 +19,26 @@
                 </ul>
             </nav>
         </header>
-        <div>
+        <div class="subheader">
             <h2>Full Stack Developer</h2>
         </div>
 
     <!-- About Me -->
         <section class="intro" id="about-me">
-            <h2 class="section-title"> About Me </h2>
-            <p> Hello, my name is Stephanie Rodriguez. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptas veritatis perferendis rerum distinctio odio expedita ullam rem praesentium tempore, quaerat officia impedit vitae dolore aspernatur quae doloremque culpa beatae.</p>
+            <h2 class="intro-section-title"> About Me </h2>
+            <p class="intro-par">
+                Hello, my name is Stephanie Rodriguez. 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Fugiat voluptas veritatis perferendis rerum distinctio odio expedita ullam 
+                rem praesentium tempore, quaerat officia impedit vitae dolore aspernatur quae doloremque culpa beatae.
+            </p>
+            <img src="./images/stock-photo.jpg" width="500px" height="500px" alt="stock avatar" class="intro-image">
         </section>
-
     <!-- My Work -->
         <section class="work" id="my-work">
             <h2 class="section-title"> My Work </h2>
             <p> Here a few examples of my projects.</p>
-            <h3 class="projects"> Run Buddy</h3>
+            <h3 class="projects"> Run Buddy </h3>
                 <a href="https://stephrrcodes.github.io/run-buddy/">
                 <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
              </a>
@@ -44,7 +49,7 @@
                 </a>
              <h3 class="projects"> Robot Gladiators </h3>
                 <a href="https://stephrrcodes.github.io/robot-gladiators/">
-                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/robotgladiators-unsplash.jpg" class="img">
+                <img alt="four robots toys in a row" src="./images/robotgladiators-unsplash.jpg" class="img">
                 </a>
             </div>
         </section>
