--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <p> Here a few examples of my projects.</p>
             <h3 class="projects"> Run Buddy </h3>
                 <a href="https://stephrrcodes.github.io/run-buddy/">
-                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" width="800px" height="800px" class="img">
+                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
              </a>
              <div class="projects-column">
             <h3 class="projects"> Horiseon Code Refractor </h3>
                 <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/">
-                <img alt="workers in a conference meeting around table" src="./images/horiseon.jpg" width="600px" height="600px" class="img">
+                <img alt="workers in a conference meeting around table" src="./images/horiseon.jpg" class="img">
                 </a>
              <h3 class="projects"> Robot Gladiators </h3>
                 <a href="https://stephrrcodes.github.io/robot-gladiators/">
-                <img alt="four robots toys in a row" src="./images/robotgladiators-unsplash.jpg"width="600px" height="600px"  class="img">
+                <img alt="four robots toys in a row" src="./images/robotgladiators-unsplash.jpg" class="img">
                 </a>
             </div>
         </section>
