--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="style.css">
         <title>Stephanie Rodriguez's Portfolio</title>
     </head>
     <body>
     <!-- Header -->
-        <header>
-            <h1>Stephanie Rodriguez</h1>
+        <header class="grid place-content-center bg-emerald-800 w-full">
+            <h1 class="text-white text-center">Stephanie Rodriguez</h1>
     <!-- Navigation -->
-            <nav>
-                <ul>
-                    <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#my-work">My Work</a></li>
-                    <li><a href="#contact-me">Contact Me</a></li>
+            <nav class="">
+                <ul class="grid grid-cols-3 place-content-center w-full text-white">
+                    <li class=""><a href="#about-me">About Me</a></li>
+                    <li class="text-white"><a href="#my-work">My Work</a></li>
+                    <li class="text-white"><a href="#contact-me">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,7 +26,7 @@
         </div>
 
     <!-- About Me -->
-        <section class="intro" id="about-me">
+        <section class="grid place-content-center bg-emerald-800 w-full h-50 text-white" id="about-me">
             <h2 class="intro-section-title"> About Me </h2>
             <p class="intro-par">
                 Hello, my name is Stephanie Rodriguez. 
@@ -32,24 +34,28 @@
                 Fugiat voluptas veritatis perferendis rerum distinctio odio expedita ullam 
                 rem praesentium tempore, quaerat officia impedit vitae dolore aspernatur quae doloremque culpa beatae.
             </p>
-            <img src="./images/stock-photo.jpg" width="300px" height="200px" alt="stock avatar" class="intro-image">
+            <img class="sm:flex" src="./images/stock-photo.jpg" alt="stock avatar">
         </section>
     <!-- My Work -->
-        <section class="work" id="my-work">
+        <section class="work " id="my-work">
             <h2 class="section-title"> My Work </h2>
             <p> Here a few examples of my projects.</p>
             <h3 class="projects"> Run Buddy </h3>
                 <a href="https://stephrrcodes.github.io/run-buddy/">
-                <img alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg" class="img">
+                <img class="lg:flex" alt="Run Buddy site main image with woman typing shoelace" src="./images/run buddy.jpeg">
              </a>
-             <div class="projects-column">
+            <div class="projects-column">
             <h3 class="projects"> Horiseon Code Refractor </h3>
                 <a href="https://stephrrcodes.github.io/Horiseon-Code-Refractor/">
-                <img alt="workers in a conference meeting around table" src="./images/horiseon.jpg" class="img">
+                <img class="md:flex" alt="workers in a conference meeting around table" src="./images/horiseon.jpg">
                 </a>
-             <h3 class="projects"> Robot Gladiators </h3>
+            <h3 class="projects"> Robot Gladiators </h3>
                 <a href="https://stephrrcodes.github.io/robot-gladiators/">
-                <img alt="four robots toys in a row" src="./images/robotgladiators-unsplash.jpg" class="img">
+                <img class="md:flex" alt="four robots toys in a row" src="./images/robotgladiators-unsplash.jpg">
+                </a>
+            <h3 class="projects"> Game Database </h3>
+                <a href="https://uhmammoth.github.io/GamePlatforms/">
+                <img class="md:flex" alt="gaming site with search bar and video games listed" src="./images/databasephoto.png">
                 </a>
             </div>
         </section>
