--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
         <link rel="stylesheet" href="style.css">
         <title>Stephanie Rodriguez's Portfolio</title>
     </head>
-    <body>
+    <body class="bg-emerald-800">
     <!-- Header -->
-        <header class="grid place-content-center bg-emerald-800 w-full">
-            <h1 class="text-white text-center">Stephanie Rodriguez</h1>
+        <header class="grid flex items-center justify-center">
+            <h1 class="text-white text-center rounded-full m-2">Stephanie Rodriguez</h1>
     <!-- Navigation -->
-            <nav class="">
-                <ul class="grid grid-cols-3 place-content-center w-full text-white">
-                    <li class=""><a href="#about-me">About Me</a></li>
-                    <li class="text-white"><a href="#my-work">My Work</a></li>
-                    <li class="text-white"><a href="#contact-me">Contact Me</a></li>
+            <nav class="flex">
+                <ul class="grid grid-cols-3 w-full text-white">
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#my-work">My Work</a></li>
+                    <li><a href="#contact-me">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,19 +26,19 @@
         </div>
 
     <!-- About Me -->
-        <section class="grid place-content-center bg-emerald-800 w-full h-50 text-white" id="about-me">
-            <h2 class="intro-section-title"> About Me </h2>
-            <p class="intro-par">
+        <section class="grid place-content-center bg-emerald-600 w-full text-white text-center" id="about-me">
+            <h2 class="intro-section-title text-black text-center bg-rose-200 rounded-full m-2"> About Me </h2>
+            <p class="intro-par text-base">
                 Hello, my name is Stephanie Rodriguez. 
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                 Fugiat voluptas veritatis perferendis rerum distinctio odio expedita ullam 
                 rem praesentium tempore, quaerat officia impedit vitae dolore aspernatur quae doloremque culpa beatae.
             </p>
-            <img class="sm:flex" src="./images/stock-photo.jpg" alt="stock avatar">
+            <img class="w-16 md:w-32 lg:w-48" src="./images/stock-photo.jpg" alt="stock avatar">
         </section>
     <!-- My Work -->
-        <section class="work " id="my-work">
-            <h2 class="section-title"> My Work </h2>
+        <section class="work bg-emerald-600 text-white text-center" id="my-work">
+            <h2 class="section-title text-black text-center bg-rose-200 rounded-full m-2"> My Work </h2>
             <p> Here a few examples of my projects.</p>
             <h3 class="projects"> Run Buddy </h3>
                 <a href="https://stephrrcodes.github.io/run-buddy/">
@@ -60,8 +60,8 @@
             </div>
         </section>
     <!--Contact Me -->
-        <section class="contact" id="contact-me"> 
-            <h2 class="section-title">Contact Me</h2>
+        <section class="contact text-center" id="contact-me"> 
+            <h2 class="section-title text-black text-center bg-amber-300 rounded-full m-2">Contact Me</h2>
             <ul class="contact-list">
                 <li>Phone: (909) 775-6811</li>
                 <li><a href="mailto:ramossteph08@gmail.com">Email Me</a></li>
