update bg color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Stephanie Rodriguez's Portfolio</title>
     </head>
-    <body>
+    <body >
     <!-- Header -->
         <header class="grid flex items-center justify-center bg-cyan-500 shadow-lg shadow-cyan-500/50">
             <h1 class="text-black text-center rounded-full m-2">Stephanie Rodriguez</h1>
@@ -26,12 +26,11 @@
         </div>
 
     <!-- About Me -->
-        <section class="grid place-content-center bg-cyan-600 w-full text-white text-center" id="about-me">
+        <section class="bg-cyan-600 w-full text-white text-center" id="about-me">
             <h3 class="section-title text-black text-center bg-white rounded-full m-2"> About Me </h3>
-            <p class="intro-par text-base">
-                Hello, my name is Stephanie Rodriguez. 
-            </p>
-            <img class="w-16 md:w-32 lg:w-48" src="./images/stock-photo.jpg" alt="stock avatar">
+            <div>
+                <p class="intro-par text-base">Hello, my name is Stephanie Rodriguez.</p>
+                <img class="w-16 md:w-32 lg:w-48" src="./images/stock-photo.jpg" alt="stock avatar"></div>
         </section>
     <!-- My Work -->
         <section class="work bg-cyan-600 text-white text-center" id="my-work">
